Add company information

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,13 +2,11 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-              <br/><br/>
-              <h2>About Landing-Page</h2>
+              <h2>Software Consulting, XP, and Graphic Design</h2>              
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>Our mission is building the right thing for our customers, but also building the thing right. </p>
+                <p>In order to do that, we are pragmatic and choose the most suitable practices for every business case, without compromising the quality of our deliverables.</p>
+                <p>If you want to know more about our services feel free to contact us at: <a href="mailto:info@avpsoftware.co.uk">info@avpsoftware.co.uk</a></p>
                 <br/>
               </div>
         </div>
